--- a/index.html
+++ b/index.html
@@ -4,78 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS Table assignment</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #fff;
-        }
-
-        table {
-            border-collapse: collapse;
-            width: 50%;
-            margin-bottom: 40px;
-        }
-
-        caption {
-            text-align: left;
-            font-weight: bold;
-            font-size: 20px;
-            margin-bottom: 5px;
-        }
-
-        th, td {
-            border: 1px solid #333;
-            padding: 8px 12px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #6bbdc3;
-            color: white;
-        }
-
-        /* Alternating row colors */
-        tr:nth-child(even) {
-            background-color: #ffd8d8;
-        }
-
-        tr:nth-child(odd) {
-            background-color: #dfffe1;
-        }
-
-
-        th:nth-child(1) {
-            color: #FFD700;
-        }
-
-        th:nth-child(2) {
-            color: #FF7043;
-        }
-
-        th:nth-child(3) {
-            color: #ff0404;
-        }
-
-        th:nth-child(4) {
-            color: #3030f9;
-        }
-
-        th:nth-child(5) {
-            color: #b352e4;
-        }
-
-    </style>
+    <title>CSS Table Assignment</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    
     <table>
-        <caption>
-            Table 1
-        </caption>
-
+        <caption>Table 1</caption>
         <tr>
             <th>Item</th>
             <th>Price</th>
@@ -83,7 +18,6 @@
             <th>Total</th>
             <th>In stock</th>
         </tr>
-
         <tr>
             <td>Coca Cola</td>
             <td>KES 90</td>
@@ -91,7 +25,6 @@
             <td>KES 900</td>
             <td>TRUE</td>
         </tr>
-
         <tr>
             <td>Exercise Book</td>
             <td>KES 130</td>
@@ -99,7 +32,6 @@
             <td>KES 260</td>
             <td>FALSE</td>
         </tr>
-
         <tr>
             <td>iPhone</td>
             <td>KES 220,000</td>
@@ -107,7 +39,6 @@
             <td>KES 660,000</td>
             <td>TRUE</td>
         </tr>
-
         <tr>
             <td>Whiteboard marker</td>
             <td>KES 65</td>
@@ -115,13 +46,10 @@
             <td>KES 195</td>
             <td>FALSE</td>
         </tr>
-
     </table>
 
     <table>
-        <caption>
-            Table 2
-        </caption>
+        <caption>Table 2</caption>
         <tr>
             <th>University</th>
             <th>Location</th>
@@ -129,7 +57,6 @@
             <th>Courses</th>
             <th>Intake</th>
         </tr>
-
         <tr>
             <td>Strathmore</td>
             <td>Nairobi</td>
@@ -137,7 +64,6 @@
             <td>Business</td>
             <td>SEPTEMBER</td>
         </tr>
-
         <tr>
             <td>Daystar</td>
             <td>Athi River</td>
@@ -145,7 +71,6 @@
             <td>Nursing</td>
             <td>MAY</td>
         </tr>
-
         <tr>
             <td>Zetech</td>
             <td>Nairobi</td>
@@ -153,16 +78,15 @@
             <td>Engineering</td>
             <td>JANUARY</td>
         </tr>
-
-         <tr>
+        <tr>
             <td>USIU</td>
             <td>Nairobi</td>
             <td>+254 732 202815</td>
             <td>Law</td>
             <td>MAY</td>
         </tr>
-
     </table>
 </body>
 
 </html>
+
