--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <table>
         <caption>Table 1</caption>
         <tr>
-            <th>Item</th>
-            <th>Price</th>
-            <th>Quantity</th>
-            <th>Total</th>
-            <th>In stock</th>
+            <th style="color: white">Item</th>
+            <th style="color: white">Price</th>
+            <th style="color: white">Quantity</th>
+            <th style="color: white">Total</th>
+            <th style="color: white">In stock</th>
         </tr>
         <tr>
             <td>Coca Cola</td>
