--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <table>
         <caption>Table 1</caption>
         <tr>
-            <th style="color: white">Item</th>
-            <th style="color: white">Price</th>
-            <th style="color: white">Quantity</th>
-            <th style="color: white">Total</th>
-            <th style="color: white">In stock</th>
+            <th style="color: white;">Item</th>
+            <th style="color: white;">Price</th>
+            <th style="color: white;">Quantity</th>
+            <th style="color: white;">Total</th>
+            <th style="color: white;">In stock</th>
         </tr>
         <tr>
             <td>Coca Cola</td>
@@ -51,11 +51,11 @@
     <table>
         <caption>Table 2</caption>
         <tr>
-            <th>University</th>
-            <th>Location</th>
-            <th>Contacts</th>
-            <th>Courses</th>
-            <th>Intake</th>
+            <th style="color: white;">University</th>
+            <th style="color: white;">>Location</th>
+            <th style="color: white;">>Contacts</th>
+            <th style="color: white;">>Courses</th>
+            <th style="color: white;">>Intake</th>
         </tr>
         <tr>
             <td>Strathmore</td>
