--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <caption>Table 2</caption>
         <tr>
             <th style="color: white;">University</th>
-            <th style="color: white;">>Location</th>
-            <th style="color: white;">>Contacts</th>
-            <th style="color: white;">>Courses</th>
-            <th style="color: white;">>Intake</th>
+            <th style="color: white;">Location</th>
+            <th style="color: white;">Contacts</th>
+            <th style="color: white;">Courses</th>
+            <th style="color: white;">Intake</th>
         </tr>
         <tr>
             <td>Strathmore</td>
